<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dbpedia</groupId>
    <artifactId>links</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <!-- Project Settings -->
        <maven.test.skip>true</maven.test.skip>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <java.version>1.8</java.version>
        <java.version.javadoc>http://java.sun.com/javase/8/docs/api/</java.version.javadoc>
        <file.encoding>UTF-8</file.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!--jena-sparql-api-version>3.0.1-1</jena-sparql-api-version-->
        <jena-sparql-api-version>3.1.0-2-SNAPSHOT</jena-sparql-api-version>
        <!-- org-apache-jena-version>3.0.1</org-apache-jena-version -->
        <org-apache-jena-version>3.1.0</org-apache-jena-version>
        <rdfunit-version>0.8.8</rdfunit-version>
        <!-- rdfunit-version>0.8.8</rdfunit-version -->
        <slf4j-version>1.7.19</slf4j-version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>23.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <!--arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg-->
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
                <executions>
                    <execution>
                        <id>install-redirect-database</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.dbpedia.links.lib.RedirectReplace</mainClass>
                        </configuration>
                    </execution>

                </executions>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <enableAssertions>false</enableAssertions>
                    <!-- Travis-CI build workaround -->
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <!-- Enable incremental compilation -->
                    <recompileMode>incremental</recompileMode>
                    <!-- Use an external Zinc server for compilation. If there is no Zinc
                        server currently running then the plugin falls back to regular incremental
                        compilation. Seems pretty safe. -->
                    <!--useZincServer>true</useZincServer-->
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-enforcer-plugin</artifactId>

                <version>1.4.1</version>

                <configuration>

                    <rules>
                        <dependencyConvergence/>
                    </rules>

                </configuration>

            </plugin>

        </plugins>

    </build>
    <dependencies>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.aksw.rdfunit</groupId>
            <artifactId>rdfunit-io</artifactId>
            <version>${rdfunit-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.aksw.rdfunit</groupId>
            <artifactId>rdfunit-core</artifactId>
            <version>${rdfunit-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- jena-sparql-api -->
        <dependency>
            <groupId>org.aksw.jena-sparql-api</groupId>
            <artifactId>jena-sparql-api-core</artifactId>
            <version>${jena-sparql-api-version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.aksw.jena-sparql-api</groupId>
            <artifactId>jena-sparql-api-cache-h2</artifactId>
            <version>${jena-sparql-api-version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.aksw.jena-sparql-api</groupId>
            <artifactId>jena-sparql-api-resources</artifactId>
            <version>${jena-sparql-api-version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- jena -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>${org-apache-jena-version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
            <version>${org-apache-jena-version}</version>
            <scope>compile</scope>
        </dependency>


        <!-- JSON -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sf.jopt-simple/jopt-simple -->
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>5.0.3</version>
        </dependency>

        <!--dependency>
            <groupId>org.dbpedia.extraction</groupId>
            <artifactId>core</artifactId>
            <version>4.2-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency-->

        <dependency>
            <groupId>org.dbpedia.data</groupId>
            <artifactId>redirects</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.mapdb</groupId>
            <artifactId>mapdb</artifactId>
            <version>3.0.5</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.9</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>2.11.4</version>
        </dependency>

        <!--  LIMES has to be installed independently, since it currently does not have an entry in the maven repository  -->
        <dependency>
            <groupId>org.aksw.limes.core</groupId>
            <artifactId>limes-core</artifactId>
            <version>1.2.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>


    </dependencies>

    <repositories>
        <repository>
            <!--releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases-->
            <id>YourId3</id>
            <name>Sebastian Hellman</name>
            <url>http://downloads.dbpedia.org/maven2</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>maven.aksw.snapshots</id>
            <name>AKSW Snapshot Repository</name>
            <url>http://maven.aksw.org/archiva/repository/snapshots</url>
        </repository>
    </repositories>
</project>